--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>SprintTool</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<div class="topbar">
+  <h2>Sprint HeinenCan tool</h2>
+</div>
   <app-root></app-root>
 </body>
 </html>
