--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="topbar">
-  <h2>Sprint HeinenCan tool</h2>
+  <h2>Sprint tool</h2>
 </div>
   <app-root></app-root>
 </body>
